# graphon

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SLIM_TOOL_CODE_SUPPORT_PLAN.md  cog.toml  justfile  prek.toml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cla.yml  pr.yml  pypi_publish.yml  release.yml  test.yml  test_pypi_publish.yml
docs/adr/: 0001-adopt-architecture-decision-records.md  0002-define-hitl-interface-boundary.md  0003-define-llm-polling-execution-model.md  README.md  backlog.md
docs/tool-runtime-compatibility/: 2026-04-27-dev-diary.md
docs/tool-runtime-compatibility/references/: 2026-04-27-implementation-plan.md  2026-04-27-review-en.md  2026-04-27-review-zh.md
example/: workflow.py
examples/: __init__.py
examples/chatflow_dsl_runner/: README.md  chatflow_dsl_agent.yml  chatflow_dsl_simple.yml  credentials.example.json  main.py
examples/graphon_dsl_openai_slim/: README.md  cred.json.example  workflow.py  workflow.yml
examples/graphon_openai_slim/: .env.example  README.md  __init__.py  workflow.py
examples/openai_slim_minimal/: .env.example  README.md  workflow.py
examples/openai_slim_parallel_translation/: .env.example  README.md  workflow.py
examples/slim_llm/: README.md  code.py  credentials.example.json  dsl.py  event_filters.py  graph.yml  settings.py
scripts/: new-adr.py
signatures/version1/: cla.json
src/graphon/: enums.py  errors.py  variable_loader.py  workflow_builder.py  workflow_type_encoder.py
src/graphon/dsl/: __init__.py  _provider.py  agent_runtime.py  code_runtime.py  entities.py  errors.py  importer.py  node_factory.py  tool_runtime.py
src/graphon/entities/: __init__.py  base_node_data.py  graph_failure_source.py  pause_reason.py  workflow_execution.py  workflow_node_execution.py
src/graphon/file/: constants.py  file_factory.py  file_manager.py  helpers.py  models.py  protocols.py  runtime.py  tool_file_parser.py
src/graphon/filters/: __init__.py
src/graphon/graph/: graph.py  graph_template.py  validation.py
src/graphon/graph_engine/: __init__.py  _engine_utils.py  config.py  container_execution.py  container_handlers.py  error_handler.py  frames.py  graph_engine.py  graph_state_manager.py  iteration_container_handler.py  loop_container_handler.py  manager.py  suspended_invocations.py  worker.py
src/graphon/graph_events/: __init__.py  agent.py  graph.py  iteration.py  loop.py  node.py  (+1 more)
tests/: test_new_adr_script.py  test_protocol_abstract_contracts.py  test_protocols_exports.py  test_workflow_builder.py
tests/dsl/: test_app_bootstrap.py  test_code_runtime.py  test_importer.py  test_node_factory.py  test_node_factory_agent.py  test_slim_agent.py  test_slim_agent_node_runtime.py  test_slim_client.py  test_slim_exports.py  test_slim_llm.py  test_slim_package_loader.py  test_tool_runtime.py
tests/entities/: test_pause_reason.py  test_workflow_execution_status.py  test_workflow_node_execution.py
tests/example/: test_workflow.py
tests/examples/: test_graphon_openai_slim.py  test_openai_slim_examples.py  test_parallel_translation_workflow.py  test_slim_llm_example.py
tests/file/: test_file_factory.py  test_file_manager.py  test_models.py  test_runtime.py  test_tool_file_parser.py
tests/graph/: test_graph.py  test_graph_validation.py
tests/graph_engine/: test_command_handlers.py  test_cooperative_container_execution.py  test_dispatch_patterns.py  test_event_filters.py  test_raw_engine_events.py  test_response_coordinator.py  test_response_stream_filter.py  test_serializable_graph_runtime.py
tests/graph_events/: __init__.py  test_graph_run_failed_event.py  test_traversal_events.py
tests/helpers/: builders.py  workflow_events.py
tests/http/: test_client.py  test_executor_secret_masking.py
tests/model_runtime/: test_common_entities.py  test_encoders.py  test_large_language_model_non_stream_result.py  test_large_language_model_tool_calls.py  test_llm_entities.py  test_message_entities.py  test_model_dispatch.py  test_model_entities.py  test_text_embedding_model.py
tests/node_events/: test_node_event_aliases.py  test_node_run_result.py
tests/nodes/: test_code_node.py  test_container_dispatch.py  test_human_input_runtime_binding.py
tests/runtime/: test_graph_runtime_state.py  test_variable_pool.py
tests/utils/: test_condition_processor.py  test_variable_utils.py
tests/variables/: test_input_entities.py  test_sensitivity.py  test_template_resolution.py  test_workflow_type_encoder_secret.py
tests/workflows/: test_full_graph_events.py
(+215 files in other folders)
