[project]
name = 'graphon'
version = "0.1.2"
description = 'Graph execution engine for agentic AI workflows.'
readme = 'README.md'
license = 'Apache-2.0'
license-files = ['LICENSE']
# Keep Python support aligned with `unstructured`, which currently declares
# `Requires-Python: <3.14,>=3.11`.
requires-python = '>=3.12,<3.14'
dependencies = [
    'charset-normalizer>=2.1',
    'httpx>=0.28',
    'json-repair>=0.55',
    'jsonschema>=4',
    'orjson>=3',
    'pandas[excel]>=2.1',
    'pydantic>=2.7',
    'pydantic-extra-types>=2',
    'pypdfium2>=5',
    'python-docx>=1.2',
    'pyyaml>=6',
    'tiktoken>=0.12',
    'transformers>=4',
    'typing-extensions>=4.10.0',
    'unstructured[docx,epub,md,ppt,pptx]>=0.21',
    'pypandoc>=1.13',
    'webvtt-py>=0.5',
]

[project.urls]
source = 'https://github.com/langgenius/graphon'
homepage = 'https://github.com/langgenius/graphon'
issues = 'https://github.com/langgenius/graphon/issues'

[dependency-groups]
dev = ['pytest', 'pytest-cov', 'pytest-mock', 'pytest-xdist', 'ruff', 'prek', 'ty']

[build-system]
requires = ['uv_build~=0.11']
build-backend = 'uv_build'

[tool.uv]
default-groups = ['dev']

[tool.ruff]
fix = true
preview = true
required-version = '>=0.15'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'COM812', # Conflicts with `ruff format`.
    'ERA',    # False positives are common.
    'ANN',    # Full annotation coverage is too strict for this codebase.
    'TC',     # Runtime use of typing constructs is common here.
    'S',      # Security rules are temporarily handled separately.
    'D',      # Docstring rules are not applicable here.
    'PGH003', # Not applicable here.
    'CPY',    # Not applicable here.
    'FBT',    # Not applicable here.
    'SLF',    # Not applicable here.
    'TID',    # Not applicable here.
    'FIX',    # Not applicable here.
    ########### TODO(99): Temporarily disabled ###########
    'C901',
    'TRY004',
    'TD005',
    'TD004',
    'TD003',
    'TD002',
    'TD001',
    'PLW0603',
    'PLR6301',
    'PLR2004',
    'PLR1702',
    'PLR0917',
    'PLR0915',
    'PLR0914',
    'PLR0913',
    'PLR0912',
]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.per-file-ignores]
'tests/**/*.py' = [
    'S101', # Pytest convention relies on plain assert statements.
]

[tool.ty.environment]
python-platform = "linux"

[tool.pytest]
minversion = '9.0'
addopts = ['-n', 'auto']
testpaths = ['tests']
